--- a/docs/audio/tts/index.mdx
+++ b/docs/audio/tts/index.mdx
@@ -51,6 +51,7 @@ POST *https://api.turing.sh/audio/tts*
       headers: {
         "Content-Type": "application/json",
         Authorization: "Bearer YOUR_API_KEY",
+        "x-captcha-token": "Captcha key"
       },
       data: {
   "model": "google",
@@ -69,6 +70,7 @@ POST *https://api.turing.sh/audio/tts*
     headers={
       "Content-Type": "application/json",
       "Authorization": "Bearer YOUR_API_KEY",
+      "x-captcha-token": "Captcha key"
     },
     data=json.dumps({
   "model": "google",
