--- a/docs/text/gpt-new/index.mdx
+++ b/docs/text/gpt-new/index.mdx
@@ -44,6 +44,7 @@ POST *https://api.turing.sh/text/gpt-new*
       headers: {
         "Content-Type": "application/json",
         Authorization: "Bearer YOUR_API_KEY",
+        "x-captcha-token": "Captcha key"
       },
       data: {
   "messages": "array",
@@ -63,6 +64,7 @@ POST *https://api.turing.sh/text/gpt-new*
     headers={
       "Content-Type": "application/json",
       "Authorization": "Bearer YOUR_API_KEY",
+      "x-captcha-token": "Captcha key"
     },
     data=json.dumps({
   "messages": "array",
