--- a/docs/audio/music/index.mdx
+++ b/docs/audio/music/index.mdx
@@ -38,6 +38,7 @@ POST *https://api.turing.sh/audio/music*
       headers: {
         "Content-Type": "application/json",
         Authorization: "Bearer YOUR_API_KEY",
+        "x-captcha-token": "Captcha key"
       },
       data: {
   "prompt": "string",
@@ -55,6 +56,7 @@ POST *https://api.turing.sh/audio/music*
     headers={
       "Content-Type": "application/json",
       "Authorization": "Bearer YOUR_API_KEY",
+      "x-captcha-token": "Captcha key"
     },
     data=json.dumps({
   "prompt": "string",
