--- a/docs/image/sh/index.mdx
+++ b/docs/image/sh/index.mdx
@@ -85,6 +85,7 @@ POST *https://api.turing.sh/image/sh*
       headers: {
         "Content-Type": "application/json",
         Authorization: "Bearer YOUR_API_KEY",
+        "x-captcha-token": "Captcha key"
       },
       data: {
   "prompt": "string",
@@ -107,6 +108,7 @@ POST *https://api.turing.sh/image/sh*
     headers={
       "Content-Type": "application/json",
       "Authorization": "Bearer YOUR_API_KEY",
+      "x-captcha-token": "Captcha key"
     },
     data=json.dumps({
   "prompt": "string",
