--- a/docs/text/alan/index.mdx
+++ b/docs/text/alan/index.mdx
@@ -71,6 +71,7 @@ POST *https://api.turing.sh/text/alan*
       headers: {
         "Content-Type": "application/json",
         Authorization: "Bearer YOUR_API_KEY",
+        "x-captcha-token": "Captcha key"
       },
       data: {
   "userName": "string",
@@ -90,6 +91,7 @@ POST *https://api.turing.sh/text/alan*
     headers={
       "Content-Type": "application/json",
       "Authorization": "Bearer YOUR_API_KEY",
+      "x-captcha-token": "Captcha key"
     },
     data=json.dumps({
   "userName": "string",
