--- a/docs/text/other/index.mdx
+++ b/docs/text/other/index.mdx
@@ -42,6 +42,7 @@ POST *https://api.turing.sh/text/other*
       headers: {
         "Content-Type": "application/json",
         Authorization: "Bearer YOUR_API_KEY",
+        "x-captcha-token": "Captcha key"
       },
       data: {
   "messages": "array",
@@ -60,6 +61,7 @@ POST *https://api.turing.sh/text/other*
     headers={
       "Content-Type": "application/json",
       "Authorization": "Bearer YOUR_API_KEY",
+      "x-captcha-token": "Captcha key"
     },
     data=json.dumps({
   "messages": "array",
