--- a/docs/text/translate/index.mdx
+++ b/docs/text/translate/index.mdx
@@ -41,6 +41,7 @@ POST *https://api.turing.sh/text/translate*
       headers: {
         "Content-Type": "application/json",
         Authorization: "Bearer YOUR_API_KEY",
+        "x-captcha-token": "Captcha key"
       },
       data: {
   "text": "string",
@@ -59,6 +60,7 @@ POST *https://api.turing.sh/text/translate*
     headers={
       "Content-Type": "application/json",
       "Authorization": "Bearer YOUR_API_KEY",
+      "x-captcha-token": "Captcha key"
     },
     data=json.dumps({
   "text": "string",
