--- a/docs/video/zelescope/index.mdx
+++ b/docs/video/zelescope/index.mdx
@@ -30,6 +30,7 @@ POST *https://api.turing.sh/video/zelescope*
       headers: {
         "Content-Type": "application/json",
         Authorization: "Bearer YOUR_API_KEY",
+        "x-captcha-token": "Captcha key"
       },
       data: {
   "prompt": "string",
@@ -46,6 +47,7 @@ POST *https://api.turing.sh/video/zelescope*
     headers={
       "Content-Type": "application/json",
       "Authorization": "Bearer YOUR_API_KEY",
+      "x-captcha-token": "Captcha key"
     },
     data=json.dumps({
   "prompt": "string",
