docs: response docs

--- a/docs/audio/music/index.mdx
+++ b/docs/audio/music/index.mdx
@@ -26,6 +26,11 @@ POST *https://api.turing.sh/audio/music*
   - Type: boolean
   - Required: false
 
+## Response
+
+<Error>Response not defined yet</Error>
+
+
 ## Examples
 
 <CodeGroup title="Music generation example">
