--- a/docs/audio/stt/index.mdx
+++ b/docs/audio/stt/index.mdx
@@ -34,6 +34,11 @@ POST *https://api.turing.sh/audio/stt*
   - Type: boolean
   - Required: false
 
+## Response
+
+<Error>Response not defined yet</Error>
+
+
 ## Examples
 
 <CodeGroup title="Speech to text example">
