--- a/docs/audio/tts/index.mdx
+++ b/docs/audio/tts/index.mdx
@@ -39,6 +39,11 @@ POST *https://api.turing.sh/audio/tts*
   - Type: boolean
   - Required: false
 
+## Response
+
+<Error>Response not defined yet</Error>
+
+
 ## Examples
 
 <CodeGroup title="Text to speech example">
