--- a/docs/image/anything/index.mdx
+++ b/docs/image/anything/index.mdx
@@ -52,6 +52,11 @@ POST *https://api.turing.sh/image/anything*
   - Required: false
   - Default: true
 
+## Response
+
+<Error>Response not defined yet</Error>
+
+
 ## Examples
 
 <CodeGroup title="Anything models example">
