--- a/docs/image/controlnet/index.mdx
+++ b/docs/image/controlnet/index.mdx
@@ -25,6 +25,11 @@ POST *https://api.turing.sh/image/controlnet*
   - Type: boolean
   - Required: false
 
+## Response
+
+<Error>Response not defined yet</Error>
+
+
 ## Examples
 
 <CodeGroup title="Controlnet example">
