--- a/docs/image/dall-e/index.mdx
+++ b/docs/image/dall-e/index.mdx
@@ -31,6 +31,11 @@ POST *https://api.turing.sh/image/dall-e*
   - Type: boolean
   - Required: false
 
+## Response
+
+<Error>Response not defined yet</Error>
+
+
 ## Examples
 
 <CodeGroup title="Dall-e 2 example">
