--- a/docs/image/kandinsky/index.mdx
+++ b/docs/image/kandinsky/index.mdx
@@ -58,6 +58,11 @@ POST *https://api.turing.sh/image/kandinsky*
   - Required: false
   - Default: true
 
+## Response
+
+<Error>Response not defined yet</Error>
+
+
 ## Examples
 
 <CodeGroup title="Kandinsky 2.1 example">
