--- a/docs/image/sdxl/index.mdx
+++ b/docs/image/sdxl/index.mdx
@@ -80,6 +80,33 @@ POST *https://api.turing.sh/image/sdxl*
   - Required: false
   - Default: true
 
+## Response
+
+
+- **cost**
+  - Type: number
+  - Description: Cost of the request in USD
+
+- **results**
+  - Type: array
+  - Description: Results of the request
+
+- **status**
+  - Type: string
+  - Description: Status of the request
+
+- **progress**
+  - Type: number
+  - Description: Progress of the request
+
+- **id**
+  - Type: string
+  - Description: ID of the request
+
+- **error**
+  - Type: string
+  - Description: Error of the request
+
 ## Examples
 
 <CodeGroup title="Stable Diffusion XL example">
