--- a/docs/image/sh/index.mdx
+++ b/docs/image/sh/index.mdx
@@ -73,6 +73,33 @@ POST *https://api.turing.sh/image/sh*
   - Required: false
   - Default: true
 
+## Response
+
+
+- **cost**
+  - Type: number
+  - Description: Cost of the request in USD
+
+- **id**
+  - Type: string
+  - Description: ID of the request
+
+- **status**
+  - Type: string
+  - Description: Status of the request
+
+- **progress**
+  - Type: number
+  - Description: Progress of the request
+
+- **queue_position**
+  - Type: number
+  - Description: Queue position of the request
+
+- **results**
+  - Type: array
+  - Description: Results of the request
+
 ## Examples
 
 <CodeGroup title="Stablehorde example">
