--- a/docs/text/alan/index.mdx
+++ b/docs/text/alan/index.mdx
@@ -59,6 +59,11 @@ POST *https://api.turing.sh/text/alan*
   - Type: number
   - Required: false
 
+## Response
+
+<Error>Response not defined yet</Error>
+
+
 ## Examples
 
 <CodeGroup title="Alan example">
