--- a/docs/text/filter/index.mdx
+++ b/docs/text/filter/index.mdx
@@ -22,6 +22,29 @@ POST *https://api.turing.sh/text/filter*
   - Type: boolean
   - Required: false
 
+## Response
+
+
+- **nsfw**
+  - Type: boolean
+  - Description: Whether the text is nsfw or not
+
+- **youth**
+  - Type: boolean
+  - Description: Whether the text is youth or not
+
+- **cp**
+  - Type: boolean
+  - Description: Whether the text is cp or not
+
+- **toxic**
+  - Type: boolean
+  - Description: Whether the text is toxic or not
+
+- **done**
+  - Type: boolean
+  - Description: Whether the request is done or not
+
 ## Examples
 
 <CodeGroup title="Text Filter example">
