--- a/docs/text/gpt/index.mdx
+++ b/docs/text/gpt/index.mdx
@@ -37,6 +37,11 @@ POST *https://api.turing.sh/text/gpt*
   - Type: boolean
   - Required: false
 
+## Response
+
+<Error>Response not defined yet</Error>
+
+
 ## Examples
 
 <CodeGroup title="OpenAI Models example">
