--- a/docs/text/other/index.mdx
+++ b/docs/text/other/index.mdx
@@ -30,6 +30,25 @@ POST *https://api.turing.sh/text/other*
   - Type: boolean
   - Required: false
 
+## Response
+
+
+- **cost**
+  - Type: number
+  - Description: Cost of the request in USD
+
+- **result**
+  - Type: string
+  - Description: Result of the request
+
+- **status**
+  - Type: string
+  - Description: Status of the request
+
+- **done**
+  - Type: boolean
+  - Description: Whether the request is done or not
+
 ## Examples
 
 <CodeGroup title="Other models example">
