--- a/docs/text/translate/index.mdx
+++ b/docs/text/translate/index.mdx
@@ -29,6 +29,11 @@ POST *https://api.turing.sh/text/translate*
   - Options: google, microsoft
   - Default: google
 
+## Response
+
+<Error>Response not defined yet</Error>
+
+
 ## Examples
 
 <CodeGroup title="Translate text example">
