--- a/docs/video/zelescope/index.mdx
+++ b/docs/video/zelescope/index.mdx
@@ -18,6 +18,11 @@ POST *https://api.turing.sh/video/zelescope*
   - Required: false
   - Default: 10
 
+## Response
+
+<Error>Response not defined yet</Error>
+
+
 ## Examples
 
 <CodeGroup title="Zelescope example">
