--- a/docs/text/google/index.mdx
+++ b/docs/text/google/index.mdx
@@ -27,6 +27,21 @@ POST *https://api.turing.sh/text/google*
   - Required: false
   - Default: 0.9
 
+## Response
+
+
+- **cost**
+  - Type: number
+  - Description: Cost of the request in USD
+
+- **result**
+  - Type: string
+  - Description: Result of the request
+
+- **done**
+  - Type: boolean
+  - Description: Whether the request is done or not
+
 ## Examples
 
 <CodeGroup title="Google Models example">
