--- a/docs/text/gpt-new/index.mdx
+++ b/docs/text/gpt-new/index.mdx
@@ -32,6 +32,11 @@ POST *https://api.turing.sh/text/gpt-new*
   - Options: google, youtube-search, weather, wikipedia, tenor, alphavantage-stocks, alphavantage-crypto, alphavantage-forex, free-games, tasty, world-news, calculator, github, code-interpreter, diagrams
   - Default: 
 
+## Response
+
+<Error>Response not defined yet</Error>
+
+
 ## Examples
 
 <CodeGroup title="OpenAI models example">
