--- a/docs/text/huggingface/index.mdx
+++ b/docs/text/huggingface/index.mdx
@@ -28,6 +28,21 @@ POST *https://api.turing.sh/text/huggingface*
   - Type: string
   - Required: false
 
+## Response
+
+
+- **cost**
+  - Type: number
+  - Description: Cost of the request in USD
+
+- **result**
+  - Type: string
+  - Description: Result of the request
+
+- **done**
+  - Type: boolean
+  - Description: Whether the request is done or not
+
 ## Examples
 
 <CodeGroup title="Huggingface based models example">
