fix: sh default model + number description

--- a/docs/image/dall-e/index.mdx
+++ b/docs/image/dall-e/index.mdx
@@ -14,7 +14,9 @@ POST *https://api.turing.sh/image/dall-e*
 - **number**
   - Type: number
   - Required: true
+  - Description: Number of images to generate
   - Options: 1, 2, 3, 4
+  - Default: 1
 
 - **size**
   - Type: string
