--- a/docs/image/kandinsky/index.mdx
+++ b/docs/image/kandinsky/index.mdx
@@ -20,6 +20,7 @@ POST *https://api.turing.sh/image/kandinsky*
 - **number**
   - Type: number
   - Required: false
+  - Description: Number of images to generate
   - Default: 1
 
 - **negative_prompt**
