--- a/docs/image/sh/index.mdx
+++ b/docs/image/sh/index.mdx
@@ -39,6 +39,7 @@ POST *https://api.turing.sh/image/sh*
 - **number**
   - Type: number
   - Required: false
+  - Description: Number of images to generate
   - Default: 1
 
 - **strength**
@@ -62,7 +63,7 @@ POST *https://api.turing.sh/image/sh*
   - Type: string
   - Required: false
   - Options: Deliberate, Anything Diffusion, stable_diffusion, ICBINP - I Can't Believe It's Not Photography, ChilloutMix, majicMIX realistic, Dreamshaper, URPM, Hentai Diffusion, CamelliaMix 2.5D, BB95 Furry Mix, Counterfeit, iCoMix, Abyss OrangeMix, Realistic Vision, BRA, Epic Diffusion, GTA5 Artwork Diffusion, Liberty, RealBiter, Zeipher Female Model, Analog Madness, stable_diffusion_2.1, HRL, Rev Animated, Anygen, Furry Epoch, Neurogen, Hassanblend, Dreamlike Photoreal, Project Unreal Engine 5, Arcane Diffusion, OpenJourney Diffusion, SDXL_beta::stability.ai#6901
-  - Default: stable_diffusion
+  - Default: SDXL_beta::stability.ai#6901
 
 - **nsfw**
   - Type: boolean
@@ -121,7 +122,7 @@ POST *https://api.turing.sh/image/sh*
   "steps": 50,
   "number": 1,
   "sampler": "k_lms",
-  "model": "stable_diffusion",
+  "model": "SDXL_beta::stability.ai#6901",
   "stream": true
 },
     })
@@ -144,7 +145,7 @@ POST *https://api.turing.sh/image/sh*
   "steps": 50,
   "number": 1,
   "sampler": "k_lms",
-  "model": "stable_diffusion",
+  "model": "SDXL_beta::stability.ai#6901",
   "stream": true
 }),
   )
