--- a/docs/image/upscale/index.mdx
+++ b/docs/image/upscale/index.mdx
@@ -4,6 +4,12 @@ title: Upscale models
 
 # Upscale models
 POST *https://api.turing.sh/image/upscale*
+
+## Pricing
+
+
+- **Average:** 0.01
+
 ## Parameters
 
 
