--- a/docs/image/dall-e/index.mdx
+++ b/docs/image/dall-e/index.mdx
@@ -36,8 +36,24 @@ POST *https://api.turing.sh/image/dall-e*
 
 ## Response
 
-<Error>Response not defined yet</Error>
 
+- **cost**
+  - Type: number
+
+- **results**
+  - Type: array
+
+- **status**
+  - Type: string
+
+- **progress**
+  - Type: number
+
+- **id**
+  - Type: string
+
+- **done**
+  - Type: boolean
 
 ## Examples
 
