--- a/docs/image/kandinsky/index.mdx
+++ b/docs/image/kandinsky/index.mdx
@@ -62,8 +62,21 @@ POST *https://api.turing.sh/image/kandinsky*
 
 ## Response
 
-<Error>Response not defined yet</Error>
 
+- **cost**
+  - Type: number
+
+- **results**
+  - Type: array
+
+- **status**
+  - Type: string
+
+- **progress**
+  - Type: number
+
+- **id**
+  - Type: string
 
 ## Examples
 
