--- a/docs/text/openchat/index.mdx
+++ b/docs/text/openchat/index.mdx
@@ -30,8 +30,18 @@ POST *https://api.turing.sh/text/openchat*
 
 ## Response
 
-<Error>Response not defined yet</Error>
 
+- **result**
+  - Type: string
+
+- **done**
+  - Type: boolean
+
+- **cost**
+  - Type: number
+
+- **finishReason**
+  - Type: string
 
 ## Examples
 
