--- a/docs/text/google/index.mdx
+++ b/docs/text/google/index.mdx
@@ -28,6 +28,12 @@ POST *https://api.turing.sh/text/google*
   - Required: false
   - Default: 0.9
 
+- **id**
+  - Type: string
+  - Required: false
+  - Description: ID of the conversation (used for data saving)
+  - Default: fd0fc43a-9670-4a4f-8882-dd4e7f7bf440
+
 ## Response
 
 
@@ -61,7 +67,8 @@ POST *https://api.turing.sh/text/google*
   "messages": "array",
   "model": "chat-bison",
   "max_tokens": 512,
-  "temperature": 0.9
+  "temperature": 0.9,
+  "id": "fd0fc43a-9670-4a4f-8882-dd4e7f7bf440"
 },
     })
   })();
@@ -80,7 +87,8 @@ POST *https://api.turing.sh/text/google*
   "messages": "array",
   "model": "chat-bison",
   "max_tokens": 512,
-  "temperature": 0.9
+  "temperature": 0.9,
+  "id": "fd0fc43a-9670-4a4f-8882-dd4e7f7bf440"
 }),
   )
   ```
