--- a/docs/text/gpt-new/index.mdx
+++ b/docs/text/gpt-new/index.mdx
@@ -30,13 +30,26 @@ POST *https://api.turing.sh/text/gpt-new*
 - **plugins**
   - Type: array
   - Required: false
-  - Options: google, youtube-search, weather, wikipedia, tenor, alphavantage-stocks, alphavantage-crypto, alphavantage-forex, free-games, tasty, world-news, calculator, github, code-interpreter, diagrams, render-diagrams, planfit, wolfram, image
+  - Options: google, youtube-search, weather, wikipedia, tenor, alphavantage-stocks, alphavantage-crypto, alphavantage-forex, free-games, tasty, world-news, calculator, github, code-interpreter, diagrams, render-diagrams, planfit, wolfram, image, music
   - Default: 
 
 ## Response
 
-<Error>Response not defined yet</Error>
 
+- **result**
+  - Type: string
+
+- **done**
+  - Type: boolean
+
+- **cost**
+  - Type: number
+
+- **tool**
+  - Type: object
+
+- **finishReason**
+  - Type: string
 
 ## Examples
 
