feat(text): add translate response

--- a/docs/text/translate/index.mdx
+++ b/docs/text/translate/index.mdx
@@ -32,8 +32,17 @@ POST *https://api.turing.sh/text/translate*
 
 ## Response
 
-<Error>Response not defined yet</Error>
+- **status**
+  - Type: boolean
+  - Description: Whether the request succeeded or not
 
+- **translated**
+  - Type: string
+  - Description: The translated message
+
+- **time**
+  - Type: number
+  - Description: How long the request took
 
 ## Examples
 
