--- a/docs/text/groq/index.mdx
+++ b/docs/text/groq/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: OpenChat models
+title: GroqCloud models
 ---
 
-# OpenChat models
-POST *https://api.turing.sh/text/openchat*
+# GroqCloud models
+POST *https://api.turing.sh/text/groq*
 
 ## Parameters
 
@@ -15,8 +15,8 @@ POST *https://api.turing.sh/text/openchat*
 - **model**
   - Type: string
   - Required: false
-  - Options: openchat_v3.2_mistral
-  - Default: openchat_v3.2_mistral
+  - Options: mixtral-8x7b-32768
+  - Default: mixtral-8x7b-32768
 
 - **max_tokens**
   - Type: number
@@ -32,13 +32,7 @@ POST *https://api.turing.sh/text/openchat*
   - Type: string
   - Required: false
   - Description: ID of the conversation (used for data saving)
-  - Default: a582c198-c87a-4180-bfc1-4b316bd21fb0
-
-- **autoSystemMessage**
-  - Type: boolean
-  - Required: false
-  - Description: Send system messages automatically
-  - Default: true
+  - Default: 7ab7480c-8e5d-4177-89a1-f90444798ae5
 
 ## Response
 
@@ -61,13 +55,13 @@ POST *https://api.turing.sh/text/openchat*
 
 ## Examples
 
-<CodeGroup title="OpenChat models example">
+<CodeGroup title="GroqCloud models example">
   ```typescript
   import axios from "axios";
   (async () => {
     let response = await axios({
       method: "post",
-      url: 'https://api.turing.sh/text/openchat',
+      url: 'https://api.turing.sh/text/groq',
       headers: {
         "Content-Type": "application/json",
         Authorization: "Bearer YOUR_API_KEY",
@@ -75,11 +69,10 @@ POST *https://api.turing.sh/text/openchat*
       },
       data: {
   "messages": "array",
-  "model": "openchat_v3.2_mistral",
+  "model": "mixtral-8x7b-32768",
   "max_tokens": 512,
   "temperature": 0.9,
-  "id": "a582c198-c87a-4180-bfc1-4b316bd21fb0",
-  "autoSystemMessage": true
+  "id": "7ab7480c-8e5d-4177-89a1-f90444798ae5"
 },
     })
   })();
@@ -88,7 +81,7 @@ POST *https://api.turing.sh/text/openchat*
   import requests
   import json
   response = requests.post(
-    "https://api.turing.sh/text/openchat",
+    "https://api.turing.sh/text/groq",
     headers={
       "Content-Type": "application/json",
       "Authorization": "Bearer YOUR_API_KEY",
@@ -96,11 +89,10 @@ POST *https://api.turing.sh/text/openchat*
     },
     data=json.dumps({
   "messages": "array",
-  "model": "openchat_v3.2_mistral",
+  "model": "mixtral-8x7b-32768",
   "max_tokens": 512,
   "temperature": 0.9,
-  "id": "a582c198-c87a-4180-bfc1-4b316bd21fb0",
-  "autoSystemMessage": true
+  "id": "7ab7480c-8e5d-4177-89a1-f90444798ae5"
 }),
   )
   ```
